@@ -1,5 +1,6 @@
 Changelog for mk-table-sync:
 
+   * --chunksize was not being converted to rowcount (bug #1902341).
    * Added --setvars option (bug #1904689, bug #1911371).
    * Deprecated the --utf8 option in favor of the A part in DSNs.
    * Mixed-case identifiers caused case-sensitivity issues (bug #1910276).
